--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@
 /tmp
 
 
-#Ignore the sensitive Keys 
+# Ignore the sensitive Keys 
 /config/application.yml
-config/secrets.yml
+/config/secrets.yml
