--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,3 +21,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+   STRIPE_API_KEY: "sk_test_A0vgm8xQwkM70VD7aQDpxiKH"
+  STRIPE_PUBLIC_KEY: "pk_test_iqR8f17aBkmJYsA2zTXADzIs"
